syntax = "proto3";

package api.common.v1;

option go_package = "github.com/your-username/e-shop-native/api/protobuf/common/v1;v1";

enum ErrorCode {
  // 默认值，不指定错误
  UNKNOWN = 0;

  // 内部错误
  INTERNAL = 1;

  // -- 用户服务错误 (1000-1999) --
  USER_NOT_FOUND = 1001;
  PASSWORD_INCORRECT = 1002;
  USER_ALREADY_EXISTS = 1003;
  USERNAME_FORMAT_ERROR = 1004;
  EMAIL_FORMAT_ERROR = 1005;
  PHONE_FORMAT_ERROR = 1006;
  PASSWORD_FORMAT_ERROR = 1007;
  
  // -- 认证服务错误 (2000-2999) --
  TOKEN_INVALID = 2001;
  TOKEN_EXPIRED = 2002;
}